# az-metadata

./: Cargo.toml
src/: empty_credential.rs  imds_fetchers.rs  main.rs
