[package]
name = "az-metadata"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.0.0"
azure_svc_imds = "0.20.0"
url = "2.5.0"
azure_core = "0.20"
time = "0.3.36"
async-trait = "0.1.80"
once_cell = "1.19"
futures = "0.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
reqwest = "0.12.4"
